--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@ body {
     margin: auto;
 }
 
-#gamesection {
+.gameSection {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -14,28 +14,37 @@ body {
     border-radius: 30px;
     padding: 30px;
     width: 350px;
-    height: 450px;
+    height: 500px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 }
 
+ .colorBoxContainer, .colorOptionsContainer{
+    margin-bottom: 20px;
+}
+
+.gameStatusContainer {
+    margin-top: 20px;
+}
+
 #colorBox {
-    width: 200px;
-    height: 200px;
+    width: 250px;
+    height: 120px;
     margin: 20px auto;
     border: 2px solid black;
     border-radius: 15px;
 }
 
 #colorOptions {
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-    margin: 20px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    height: 30px;
+    gap: 15px;
+    margin-bottom: 50px;
 }
 
 button {
-    height: 30px;
-    width: 40px;
+    height: 50px;
+    width: 100px;
     border-radius: 5px;
     font-size: 16px;
     cursor: pointer;
@@ -45,8 +54,8 @@ button {
 }
 
 #newGameButton {
-    width: 150px; 
-    height: 80px;
+    width: 100px; 
+    height: 40px;
     background-color: #007BFF;
     color: white;
     border-radius: 5px;
@@ -57,40 +66,44 @@ button {
 }
 
 h1 {
-    font-size: 26px;
-    margin-bottom: 15px;
-}  
+    font-size: 22px;
+}
+
+p {
+    font-size: 14px;
+} 
 
 
 
 
 @media (max-width: 600px) {
-    #gamesection {
-        width: 300px;
-        height: 400px;
+    .gameSection {
+        width: 250px;
+        height: 550px;
     }
 
     #colorBox {
         width: 200px;
-        height: 200px;
+        height: 150px;
     }
 
     button {
-        height: 30px;
-        width: 35px;
+        height: 50px;
+        width: 70px;
         font-size: 14px;
     }
 
     h1 {
-        font-size: 22px;
+        font-size: 20px;
     }    
 
     p {
         font-size: 14px;
     }    
 
-    #gameInstructions {
-        font-size: 16px;
-    }   
+    .gameStatusContainer {
+    margin-top: 40px;
+}
+
 
 }
